--- a/code/src/index.css
+++ b/code/src/index.css
@@ -71,7 +71,7 @@ textarea {
   box-shadow:8px 8px 0px orange;
 }
 
-.whimsicle {
+.bonkers {
   border:1px solid purple;
   box-shadow:8px 8px 0px purple;
 }
