--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 20px;
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f5f5f1;
@@ -8,7 +8,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -111,7 +111,7 @@ form {
 }
 
 button {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   border: none;
 }
 
@@ -130,7 +130,7 @@ button {
 }
 
 .heart-button {
-  background-color: lightgray;
+  /* background-color: lightgray; */
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -143,15 +143,14 @@ button {
 .heart-button > span {
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .heart-button:hover {
   background-color: pink;
   cursor: pointer;
-}
-
-.heart-button:focus {
-  background-color: pink;
 }
 
 .total-likes {
