--- a/code/src/index.css
+++ b/code/src/index.css
@@ -191,7 +191,7 @@ textarea {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: #fff;
+	background: #000;
 	display: flex;
 	justify-content: center;
 	align-items: center;
