--- a/code/src/index.css
+++ b/code/src/index.css
@@ -201,7 +201,7 @@ textarea {
 .loading-heart {
 	width: 50px;
 	height: 50px;
-	border-left: 5px solid #fff;
+	border-left: 5px solid #000;
 	animation: spinner infinite 0.5s;
 }
 
