--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,6 +12,13 @@ body {
   overflow-wrap: break-word;
 }
 
+.header {
+  width: 87%;
+  max-width: 350px;
+  height: 40px;
+  margin: 60px auto 0;
+}
+
 .date-text,
 .likes-text {
   color: grey;
@@ -23,14 +30,14 @@ body {
   width: 87%;
   max-width: 350px;
   padding: 20px;
-  background-color:white;
+  background-color: white;
   border: black 1px solid;
-  margin: 40px auto;
+  margin: 10px auto 40px;
   box-shadow: 8px 8px;
 }
 
 .thought-input-container {
-  background-color: #F3F0F0;
+  background-color: #f3f0f0;
   display: flex;
   flex-direction: column;
   font-size: 16px;
@@ -40,7 +47,7 @@ body {
   width: 210px;
   font-family: 'Inconsolata', monospace;
   font-size: 15px;
-  background-color: #F5AAAD;
+  background-color: #f5aaad;
   padding: 5px 10px 8px;
   margin: 8px 0px;
   border-radius: 20px;
@@ -74,21 +81,14 @@ textarea {
   width: 35px;
   height: 35px;
   margin-right: 8px;
-  /* padding: 0 0 2.5px 4px; */
   background-color: lightgray;
   border-radius: 50%;
-  /* font-size: 17px; */
   display: flex;
   align-items: center;
   justify-content: center;
   appearance: none;
   border: none;
 }
-
-/* .heart {
-  transform: translateX(100px);
-  width: 50%;
-} */
 
 p {
   margin: 10px 0;
@@ -107,10 +107,26 @@ p {
 }
 
 .liked {
-  background-color: #F5AAAD;
+  background-color: #f5aaad;
 }
 
 button:hover,
 .blue {
   background-color: dodgerblue;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 350px;
+  margin: 0 auto;
+}
+.page-navigation {
+  display: flex;
+  align-items: center;
+}
+
+.page-button {
+  margin: 0 5px;
 }
