--- a/code/src/index.css
+++ b/code/src/index.css
@@ -72,21 +72,33 @@ body {
 	box-shadow: 5px 5px;
 	background-color: #f2f0f0;
 	max-width: 400px;
-	height: 250px;
+	height: 350px;
 }
 
 .thought-btn {
+	height: 40px;
 	background-color: #ffadad;
 	padding: 8px;
 	border-radius: 20px;
 	color: black;
 	border: none;
 	font-weight: bold;
+	font-size: 13px;
 	transition: all 0.5s ease-in-out;
 }
 
 .thought-btn:hover {
 	transform: scale(1.1);
+}
+
+/* Heart Icon */
+.send-wrapper img {
+	width: 16px;
+}
+
+/* Text on Button */
+.send-happy-thoughts {
+	padding-bottom: 10px;
 }
 .form-title {
 	font-weight: bold;
@@ -116,6 +128,15 @@ body {
 	align-items: center;
 	color: #949494;
 }
+
+/* Name inputfield */
+.name-inputfield {
+	font-family: 'Trispace', sans-serif;
+	font-size: 10px;
+	width: 50%;
+	height: 20px;
+}
+
 /*-----------------ThoughtItem------------- */
 
 .thought-container {
@@ -134,6 +155,8 @@ body {
 
 .thought-message {
 	width: 100%;
+	display: flex;
+	justify-content: space-between;
 }
 
 .thought-message p {
