--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,12 +24,10 @@ main {
 header,
 footer {
 	display: flex;
-	align-items: center;
+	text-align: center;
 	justify-content: center;
-	width: 100vw;
-	display: flex;
 	height: 100px;
-	padding: 20px 20px;
+	width: 100vw;
 }
 
 footer {
