--- a/code/src/index.css
+++ b/code/src/index.css
@@ -56,7 +56,7 @@ textarea {
   border-radius: 20px;
   border: none;
   padding: 10px;
-  width: 200px;
+  width: 250px;
   transition: all 0.2s ease-in-out;
   font-weight: bold;
 }
@@ -70,8 +70,8 @@ textarea {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  grid-gap: 30px;
-  margin-top: 20px;
+  /* grid-gap: 30px; */
+  margin: 30px 0;
   width: 90%;
   max-width: 500px;
 }
@@ -81,6 +81,7 @@ textarea {
   padding: 20px;
   box-shadow: 5px 5px;
   background-color: white;
+  margin-bottom: 30px;
 }
 
 .like-button {
