--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,45 +5,120 @@
 }
 
 body {
-  font-size: 12px;
   font-weight: bold;
   background-image: url(./assets/moras-background.jpeg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
+  margin-top: 130px;
   font-family: "Trispace", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-/*---------- Main ----------*/
+/* --------- Main ----------- */
 .container {
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
 }
 
+/* --------- Header ----------- */
 .heading-one {
   text-align: center;
   text-transform: capitalize;
-  background: whitesmoke;
+  background-color: #ffadad;
   position: fixed;
   top: 0;
   width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
 }
 
-/* -------- Card component -------- */
-.thought-container {
+/* --------- Form ----------- */
+.form-container {
+  background-color: #f2f0f0;
+  height: 300px;
   border: 1px solid #000;
-  background-color: #f1bebe;
-
   padding: 15px;
   margin: 0 auto;
   margin-bottom: 30px;
   box-shadow: 6px 6px;
-  width: 100%;
-  max-width: 400px;
+  width: 95%;
+  max-width: 500px;
+  margin-top: 80px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.text-area {
+  display: block;
+  resize: none;
+  font-size: 12px;
+  font-weight: 100;
+  padding: 10px;
+  border-color: #e0dfdf;
+  width: 90%;
+}
+
+.name-inputfield {
+  font-family: "Trispace", sans-serif;
+  font-size: 10px;
+  width: 170px;
+  height: 25px;
+  background-color: rgb(207, 219, 183);
+  border: none;
+  padding: 5px;
+}
+
+.thought-btn {
+  background-color: #ffadad;
+  border-color: transparent;
+  border-radius: 50px;
+  padding: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-family: "JetBrains Mono", monospace;
+  font-size: 12px;
+  font-weight: 700;
+  color: #000;
+  transition: all 0.2s ease-in-out;
+}
+
+.thought-btn:hover {
+  transform: scale(1.1);
+}
+
+.text-counter-wrapper {
+  display: flex;
+}
+
+.text-counter {
+  align-self: center;
+  flex-grow: 2;
+  text-align: end;
+}
+
+/* -------- Card component -------- */
+.card-container {
+  border: 1px solid #000;
+  background-color: #f1bebe;
+  padding: 15px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  box-shadow: 6px 6px;
+  width: 95%;
+  max-width: 500px;
   height: 150px;
 }
 
@@ -79,7 +154,7 @@ body {
   color: firebrick;
 }
 
-.heart-date-container {
+.heart-bin-container {
   display: flex;
   align-items: center;
   color: #949494;
@@ -87,82 +162,34 @@ body {
 
 .amount-hearts {
   margin-left: 7px;
+  width: 50px;
 }
 
 .date {
   flex-direction: column;
   flex-grow: 1;
   text-align: end;
+  color: gray;
 }
 
-/* --------- Form component ----------- */
-.form-container {
-  background-color: #f2f0f0;
-  height: 250px;
-  border: 1px solid #000;
-  padding: 15px;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  box-shadow: 6px 6px;
+.trash-btn {
+  cursor: pointer;
+  border: none;
+  transition: all 0.3s ease;
+  color: rgb(82, 78, 78);
+  font-size: 18px;
+  display: flex;
+  justify-content: end;
+  max-width: 500px;
   width: 100%;
-  max-width: 400px;
-  margin-top: 80px;
+  background-color: #f1bebe;
 }
 
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+.trash-btn:hover {
+  color: rgb(153, 26, 26);
 }
 
-.text-area {
-  display: block;
-  resize: none;
-  font-size: 12px;
-  font-weight: 100;
-  margin: 10px 0;
-  padding: 10px;
-  border-color: #e0dfdf;
-  width: 90%;
-}
-
-.name-inputfield {
-  font-family: "Trispace", sans-serif;
-  font-size: 10px;
-  width: 50%;
-  height: 25px;
-  background-color: rgb(207, 219, 183);
-}
-.thought-btn {
-  background-color: #ffadad;
-  border-color: transparent;
-  border-radius: 50px;
-  padding: 10px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-family: "JetBrains Mono", monospace;
-  font-size: 12px;
-  font-weight: 700;
-  color: #000;
-  transition: all 0.2s ease-in-out;
-}
-
-.thought-btn:hover {
-  transform: scale(1.1);
-}
-
-.text-counter-wrapper {
-  display: flex;
-}
-.text-counter {
-  align-self: center;
-  flex-grow: 2;
-  text-align: end;
-}
-
-/* ---------- Loading component ---------- */
+/* ---------- Loading ---------- */
 .loading-overlay {
   position: absolute;
   top: 0;
@@ -202,11 +229,27 @@ body {
   background-color: #000;
   color: #fff;
   width: 100%;
-  height: 100px;
-  text-align: center;
+  height: 150px;
   font-size: 20px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-transform: capitalize;
+  text-align: center;
+}
+
+.hearts-container {
+  padding: 10px;
+}
+
+.copyright-container {
+  padding: 10px;
+  color: #ffadad;
+}
+
+@media (min-width: 768px) {
+  .heading-one {
+    font-size: 28px;
+  }
 }
