--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,155 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: 'Roboto Mono', monospace;
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	border-top: 2.5em solid var(--clr-black);
+	border-bottom: 2.5em solid var(--clr-black);
+	background: var(--clr-accent);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: 'Roboto Mono', monospace;
+}
+
+:root {
+	--clr-black: #111111;
+	--clr-white: #fff;
+	--clr-primary: #dbdbdb;
+	--clr-secondary: #afadad;
+	--clr-accent: #ffadad;
+}
+
+/**   TYPOGRAOHY    **/
+.date-text,
+.characters {
+	font-family: 'Roboto', sans-serif;
+	color: var(--clr-secondary);
+}
+
+buttons {
+	font-family: inherit;
+}
+
+/***   LAYOUT   ***/
+main {
+	max-width: 650px;
+}
+
+.input-container,
+.thoughts-container--item {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid var(--clr-black);
+	box-shadow: 8px 8px var(--clr-black);
+	margin: 2em 1em;
+}
+
+.input-container {
+	background: var(--clr-primary);
+	padding: 1em 1em;
+}
+
+.input-container--details {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 1em;
+}
+
+.thoughts-container--item {
+	padding: 1em 1em;
+	background: var(--clr-white);
+}
+
+.message-text {
+	font-size: 1.2rem;
+	margin-top: 0;
+}
+
+.likes-container {
+	display: flex;
+}
+
+.like-counter {
+	color: var(--clr-secondary);
+	display: flex;
+	align-items: center;
+	margin: 0 0.5em;
+}
+
+/***   FORM   ***/
+label {
+	margin: 0em 0 1em;
+}
+
+textarea,
+textarea:active {
+	font-size: 1rem;
+	outline: none;
+	border: 1px solid var(--clr-secondary);
+}
+
+/***   BUTTONS   ***/
+button {
+	font-size: inherit;
+	height: 50px;
+	border: none;
+	color: var(--clr-black);
+	border-radius: 25px;
+}
+
+.heart-icon {
+	height: 20px;
+}
+
+img.likes {
+	padding-top: 6px;
+}
+
+.send-btn {
+	width: 250px;
+	background: var(--clr-accent);
+}
+
+.like-btn {
+	width: 50px;
+	height: 50px;
+}
+
+.liked {
+	background: var(--clr-accent);
+}
+
+/***   LOADING SPINNER  ***/
+.loading-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: var(--clr-white);
+}
+
+.loading-spinner {
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	border: 6px solid var(--clr-primary);
+	border-left: 6px solid var(--clr-secondary);
+	border-radius: 50%;
+	animation: spin 1.25s linear infinite;
+}
+
+@keyframes spin {
+	100% {
+		transform: rotate(360deg);
+	}
 }
