--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,14 @@
+:root {
+  --marigold: #ECA400;
+  --pale-green: #EAF8BF;
+  --blue-sapphire: #006992;
+  --indigo: #27476E;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,9 +16,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--indigo);
+  /* background-color: var(--blue-sapphire); */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.all-thoughts {
+  width: 40em;
+  max-width: 80vw;
+  margin: 0 auto;
+}
+
+.thought {
+  background-color: var(--pale-green);
+  box-shadow: 1rem 1rem var(--marigold);
+  padding: 1rem;
+  margin: 4rem;
+  border: 2px solid var(--marigold);
 }
