first fetch and added text input

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +11,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  width: 375px;
+  margin: 0 auto;
+}
+
+article {
+  border: solid black;
+  margin: 10px;
+}
+
+form {
+  border: solid black;
 }
