--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* FOOTER */
+
+.footer-link {
+  text-decoration: none;
+  color: rgba(130, 21, 90, 0.933);
+}
