--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,11 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #ffe9e9;
+  font-family: "Roboto", "Courier New", Courier, monospace;
 }
 
 code {
@@ -13,9 +14,38 @@ code {
     monospace;
 }
 
+h1 {
+  font-family: "Inconsolata", "Courier New", Courier, monospace;
+  font-weight: 700;
+}
+
+/* THOUGHTFORM*/
+
+.thought-form {
+  background: #f2f0f0;
+  display: inline-block;
+  padding: 15px;
+  border: 1px solid black;
+  box-shadow: 2px 10px 20px 1px;
+}
+
+.btn-happy-thought {
+  background: #ffadad;
+  border: none;
+  border-radius: 30px;
+  padding: 12px;
+  margin-top: 10px;
+}
+
 /* FOOTER */
+
+.footer-section {
+  font-size: 16px;
+  text-align: center;
+  color: #8e216a;
+}
 
 .footer-link {
   text-decoration: none;
-  color: rgba(130, 21, 90, 0.933);
+  color: rgba(193, 0, 122, 0.933);
 }
