--- a/code/src/index.css
+++ b/code/src/index.css
@@ -112,6 +112,7 @@
   padding: 0 10px;
   font-size: 16px;
   cursor: pointer;
+  color: black;
 }
 
 
@@ -123,5 +124,5 @@
 }
 
 .heart-container:hover {
-  
+
 }
