--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.BoxContainer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.post { 
+ border: 1px solid black; 
+ font-family:Arial, Helvetica, sans-serif;
+ box-shadow: 5px 5px ;
+ margin:3%;
+ display: flex;
+ flex-direction: column;
+ padding-left: 5px;
+ padding-right: 5px;
+ background-color: rgb(243, 236, 236);
+ font-size: 8px;
+}
+
+label {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+textarea {
+  margin: 2px 5px 2px 5px ;
+  padding: 3%;
+  resize: none;
+  margin-bottom: 10px;
+  font-size: 7px;
+}
+
+.button {
+  border-radius: 20px;
+  border: none;
+  height: 30px;
+  background-color: rgb(253, 185, 185);
+  margin-bottom: 10px;
+  width: 50%;
+  font-size: 7px;
+  font-weight: bold;
+}
+
+.thoughts { 
+  border: 1px solid black; 
+  font-family: Courier;
+  margin:3%;
+  word-wrap: break-word;
+  margin: 0 20px 10 20px;
+  padding: 10px;
+  box-shadow: 5px 5px;
+  font-size: 7px;
+  font-weight: bold;
+ }
+ 
+ .likes {
+  display: flex;
+  justify-content: start;
+  font-weight: normal;
+ }
+
+ .heartbutton {
+   border-radius: 50%;
+   border: none;
+ }
+
+ .date {
+   float: right;
+   justify-content: end;
+ }
